@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.4.14
+VERSION=1.4.15
 
 DEPENDENCY="zeda=1.2.25;zm=1.2.19"
